Implemented Audit_Logs and Locking user after 5 failed login attempts